<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/header_receptors">

        <ListPreference
            android:key="pref_contactOne"
            android:title="@string/contact_one"
            android:summary="@string/summary_contact_one" />

        <ListPreference
            android:key="pref_contactTwo"
            android:title="@string/contact_two"
            android:summary="@string/summary_contact_two" />

        <ListPreference
            android:key="pref_contactThree"
            android:title="@string/contact_three"
            android:summary="@string/summary_contact_three" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/header_alarm">

        <ListPreference
            android:key="pref_num_alarms"
            android:title="@string/num_alarms"
            android:summary="@string/summary_num_alarms"
            android:entries="@array/number_alerts"
            android:entryValues="@array/number_alerts"
            android:defaultValue="3" />

        <ListPreference
            android:key="pref_time_alarms"
            android:title="@string/time_alarm"
            android:summary="@string/summary_time_alarms"
            android:entries="@array/time_alerts"
            android:entryValues="@array/time_alerts_values"
            android:defaultValue="180000" />

        <EditTextPreference
            android:key="alarm_msj"
            android:title="@string/msj_alarm"
            android:summary="@string/summary_msj_alarm"
            android:persistent="true"
            android:dialogTitle="@string/dialog_title"
            android:dialogMessage="@string/dialog_text"
            android:defaultValue=" " />

    </PreferenceCategory>


</PreferenceScreen>